--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test result</title>
+<title>Maksim Kolk</title>
 </head>
 <body>
 
-<h1>Test result:</h1>
-<p>Negativan/negative</p>
+<h1>blank</h1>
+<p>blank</p>
 
 </body>
 </html>
